--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,5 +47,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.7.0'
     implementation 'com.squareup.okhttp3:okhttp:4.3.1'
     implementation 'com.squareup.retrofit2:retrofit:2.7.0'
+    implementation "androidx.room:room-runtime:2.2.5"
+    implementation 'com.facebook.stetho:stetho:1.5.1'
+
 
 }
